docker-registry/docker-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-service
spec:
  selector:
    app: docker-registry
  ports:
  - protocol: TCP
    port: 5000
