docker-registry/docker-registry-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docker-registry-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docker.adrianramosrp.com`)
      kind: Rule
      services:
        - name: docker-registry-service
          port: 5000
  # Use the secret generated by cert-manager
  tls:
    secretName: secret-docker.adrianramosrp.com
